syntax = "proto3";

package efis;

option optimize_for = CODE_SIZE;

message ChecklistFileMetadata {
  string name = 1;
  int32 default_group_index = 2;
  int32 default_checklist_index = 3;

  string make_and_model = 4;
  string aircraft_info = 5;
  string manufacturer_info = 6;
  string copyright_info = 7;

  optional string description = 8;
}

message ChecklistFile {
  ChecklistFileMetadata metadata = 1;
  repeated ChecklistGroup groups = 2;
}

message ChecklistGroup {
  string title = 1;
  repeated Checklist checklists = 2;

  enum Category {
    UNKNOWN = 0;
    NORMAL = 1;
    ABNORMAL = 2;
    EMERGENCY = 3;
  }

  Category category = 3;
}

message Checklist {
  string title = 1;

  repeated ChecklistItem items = 2;
}

message ChecklistItem {
  string prompt = 1;
  string expectation = 2;

  enum Type {
    ITEM_UNKNOWN = 0;
    ITEM_CHALLENGE = 1;
    ITEM_CHALLENGE_RESPONSE = 2;
    ITEM_TITLE = 3;
    ITEM_PLAINTEXT = 4;
    ITEM_WARNING = 5;
    ITEM_CAUTION = 6;
    ITEM_NOTE = 7;
    ITEM_SPACE = 8;
  }
  Type type = 3;

  int32 indent = 4;
  // If centered, indent is ignored.
  bool centered = 5;
}
